--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title> DEMO OPERATION TERTIAIRE</title>
+    <title> OPERATEUR TERNAIRE</title>
 </head>
 <body>
     <div id="container">
